# deepseek-agents-workshop

./: .envrc  00 - welcome.ipynb  01 - deepseek-tool-calling-101.ipynb  02 - agents-vs-workflows.ipynb  03 - tool-calling-agent.ipynb  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
answers/: 03.py
