[project]
name = "workshopagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "googlesearch-python>=1.3.0",
    "httpx>=0.28.1",
    "ipykernel>=6.30.0",
    "jinja2>=3.1.6",
    "jupyter-black>=0.4.0",
    "load-dotenv>=0.1.0",
    "markdownify>=1.1.0",
    "markitdown[pdf]>=0.1.2",
    "openai>=1.98.0",
    "rank-bm25>=0.2.2",
    "requests>=2.32.4",
]
